[package]
name = "tms_algos"
version = "0.1.0"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aws-sdk-dynamodb = "0.11.0"
log = "0.4.17"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_lamb = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"

[features]
