[package]
name = "tms_algos"
version = "0.1.0"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda-web = { version = "0.1.9", features = ["rocket05"] }
log = "0.4.17"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
